# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")
import("../../scripts/build/ninja/devtools_pre_built.gni")
import("../../third_party/typescript/typescript.gni")

devtools_module("elements") {
  sources = [
    "Adorner.js",
    "ElementsBreadcrumbsUtils.ts",
    "NewElementsBreadcrumbs.ts",
    "NewElementsBreadcrumbs_bridge.js",
  ]

  deps = [
    "../common:bundle",
    "../lit_html:bundle",
    "../platform:bundle",
    "../ui",
  ]
}

devtools_pre_built("elements-pre-built") {
  sources = [
    "ClassesPaneWidget.js",
    "ColorSwatchPopoverIcon.js",
    "ComputedStyleModel.js",
    "ComputedStyleWidget.js",
    "DOMLinkifier.js",
    "DOMPath.js",
    "ElementStatePaneWidget.js",
    "ElementsPanel.js",
    "ElementsSidebarPane.js",
    "ElementsTreeElement.js",
    "ElementsTreeElementHighlighter.js",
    "ElementsTreeOutline.js",
    "EventListenersWidget.js",
    "ImagePreviewPopover.js",
    "InspectElementModeController.js",
    "MarkerDecorator.js",
    "MetricsSidebarPane.js",
    "NodeStackTraceWidget.js",
    "PlatformFontsWidget.js",
    "PropertiesWidget.js",
    "StylePropertyHighlighter.js",
    "StylePropertyTreeElement.js",
    "StylesSidebarPane.js",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "elements.js"

  deps = [
    ":elements",
    ":elements-pre-built",
  ]
}
