# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")
import("../../third_party/typescript/typescript.gni")

devtools_module("elements") {
  sources = [
    "Adorner.js",
    "ClassesPaneWidget.js",
    "ColorSwatchPopoverIcon.js",
    "ComputedStyleModel.js",
    "ComputedStyleWidget.js",
    "DOMLinkifier.js",
    "DOMPath.js",
    "ElementStatePaneWidget.js",
    "ElementsBreadcrumbs.ts",
    "ElementsBreadcrumbsUtils.ts",
    "ElementsBreadcrumbs_bridge.js",
    "ElementsPanel.js",
    "ElementsSidebarPane.js",
    "ElementsTreeElement.js",
    "ElementsTreeElementHighlighter.js",
    "ElementsTreeOutline.js",
    "EventListenersWidget.js",
    "ImagePreviewPopover.js",
    "InspectElementModeController.js",
    "MarkerDecorator.js",
    "MetricsSidebarPane.js",
    "NodeStackTraceWidget.js",
    "PlatformFontsWidget.js",
    "PropertiesWidget.js",
    "StylePropertyHighlighter.js",
    "StylePropertyTreeElement.js",
    "StylesSidebarPane.js",
  ]

  deps = [
    "../bindings:bundle",
    "../color_picker:bundle",
    "../common:bundle",
    "../component_helpers:bundle",
    "../components:bundle",
    "../emulation:bundle",
    "../event_listeners:bundle",
    "../extensions:bundle",
    "../formatter:bundle",
    "../generated",
    "../inline_editor:bundle",
    "../mobile_throttling:bundle",
    "../object_ui:bundle",
    "../platform:bundle",
    "../protocol_client:bundle",
    "../sdk:bundle",
    "../sdk:bundle",
    "../third_party/lit-html:bundle",
    "../ui:bundle",
    "../workspace:bundle",
  ]

  visibility = [
    "../component_docs/elements_breadcrumbs",
    "../../test/unittests/front_end/elements",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "elements.js"

  is_legacy_javascript_entrypoint = [ "crbug.com/1011811" ]

  deps = [ ":elements" ]
}
