# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("formatter") {
  sources = [
    "FormatterWorkerPool.ts",
    "ScriptFormatter.ts",
    "SourceFormatter.ts",
  ]

  deps = [
    "../core/common:bundle",
    "../core/platform:bundle",
    "../core/sdk:bundle",
    "../formatter_worker:formatter_actions",
    "../models/bindings:bundle",
    "../models/text_utils:bundle",
    "../workspace:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "formatter.ts"

  deps = [ ":formatter" ]
}

devtools_entrypoint("legacy") {
  entrypoint = "formatter-legacy.ts"

  deps = [ ":bundle" ]
}
