# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("formatter_worker") {
  sources = [
    "Acorn.js",
    "AcornTokenizer.js",
    "CSSFormatter.js",
    "CSSRuleParser.js",
    "ESTreeWalker.js",
    "FormattedContentBuilder.js",
    "FormatterWorker.js",
    "HTMLFormatter.js",
    "IdentityFormatter.ts",
    "JavaScriptFormatter.js",
    "JavaScriptOutline.js",
  ]

  deps = [
    "../cm_headless",
    "../platform",
    "../text_utils",
    "../third_party/acorn",
    "../third_party/acorn-logical-assignment",
    "../third_party/acorn-loose",
    "../third_party/acorn-numeric-separator",
    "../third_party/codemirror",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "formatter_worker.ts"

  deps = [ ":formatter_worker" ]
}
