# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_module("formatter_worker") {
  sources = [
    "AcornTokenizer.ts",
    "CSSFormatter.ts",
    "CSSRuleParser.ts",
    "ESTreeWalker.ts",
    "FormattedContentBuilder.ts",
    "FormatterWorker.ts",
    "HTMLFormatter.ts",
    "HTMLOutline.ts",
    "IdentityFormatter.ts",
    "JavaScriptFormatter.ts",
    "JavaScriptOutline.ts",
  ]

  deps = [
    "../core/platform:bundle",
    "../formatter:bundle",
    "../models/text_utils:bundle",
    "../third_party/acorn:bundle",
    "../third_party/acorn-loose",
    "../third_party/codemirror",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "formatter_worker.ts"

  deps = [ ":formatter_worker" ]
}

devtools_entrypoint("formatter_actions") {
  entrypoint = "FormatterActions.ts"

  deps = []
}

devtools_entrypoint("worker_entrypoint") {
  entrypoint = "formatter_worker-entrypoint.ts"

  is_web_worker = true

  deps = [
    ":bundle",
    ":formatter_actions",
    "../core/platform:bundle",
  ]
}
